# wine-cellar

./: .dockerignore  .env.dev-sample  .env.prod-sample  .env.prod.db-sample  .eslintrc.js  .flake8  .gitignore  .lintstagedrc.json  404.html  CHANGELOG.md  CHANGELOG.md.j2  CHANGELOG_OLD.md  Dockerfile  Dockerfile.prod  LICENSE  Makefile  README.md  biome.json  docker-compose.prod.full.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.prod.sh  entrypoint.sh  eslint.config.mjs  index.html  manage.py  mkdocs.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  renovate.json  requirements.txt  tsconfig.json  webpack.common.js  webpack.dev.js  webpack.prod.js  zensical.toml
.github/workflows/: ci.yml  docs.yml  image.yml  release.yml  scorecard.yml
.husky/: commit-msg
caddy/: Caddyfile
deployment/: index.html
docs/: README.md  deployment.md  setup.md  storage.md  testing.md  wine.md
docs/development/: setup.md  testing.md
docs/setup/: backups.md  deployment.md  sso.md
docs/usage/: notifications.md  storage.md  users.md  wine.md
fixtures/: classification.json  grapes.json  region_and_appellation.json  stock.json  user.json  wines.json
locale/de_DE/LC_MESSAGES/: django.po  djangojs.po
locale/en_GB/LC_MESSAGES/: django.po  djangojs.po
locale/fr/LC_MESSAGES/: djangojs.po
locale/fr_FR/LC_MESSAGES/: django.po  djangojs.po
nginx/: nginx.conf
requirements/: base.txt  dev.txt  prod.txt
scripts/: update_docs_version.sh
search/: search_index.json
setup/: index.html
storage/: index.html
testing/: index.html
tests/: conftest.py  helpers.py  test_api.py  test_drink_by.py  test_fields.py  test_homepage.py  test_serializers.py  test_utils.py  test_views.py  test_wine_model.py
tests/playright_tests/: login.js  wine_create.js
tests/playwright-tests/: filter_wine.spec.js  login.spec.js  wine_create.spec.js
tests/storage/: test_models.py  test_views.py  test_views_consume.py  test_views_open.py  test_views_stock.py  test_views_swap.py  test_views_undo_open.py
tests/user/: test_views.py
tests/wine/: test_fields.py  test_models.py  test_serializers.py  test_utils.py  test_views_ai.py  test_views_create.py  test_views_crud.py  test_views_home.py  test_views_list.py  test_views_misc.py
types/: django.d.ts
wine/: index.html
wine_cellar/: __init__.py
wine_cellar/apps/storage/: admin.py  apps.py  forms.py  models.py  signals.py  views.py
wine_cellar/apps/storage/migrations/: 0001_initial.py  0002_add_default_shelf.py  0003_storageitem_deleted.py  0004_storageitem_price.py  0005_storageitem_drink_by_storageitem_opened_and_more.py  0006_add_vintage_fk.py  0007_cleanup_storage_item.py
wine_cellar/apps/storage/templates/: stock_add.html  stock_consume.html  stock_open.html  stock_undo_open.html  storage_confirm_delete.html  storage_create.html  storage_detail.html  storage_edit.html  storage_item_confirm_delete.html  storage_item_history.html  storage_list.html
wine_cellar/apps/storage/templatetags/: storage_tags.py
wine_cellar/apps/storage/tests/: factories.py
wine_cellar/apps/user/: apps.py  forms.py  models.py  signup_adapter.py  views.py
wine_cellar/apps/user/migrations/: 0001_initial.py  0002_alter_usersettings_currency.py  0003_usersettings_notifications.py  0004_alter_usersettings_language.py
wine_cellar/apps/user/templates/: settings.html  user_profile.html
wine_cellar/apps/user/tests/: factories.py
wine_cellar/apps/wine/: admin.py  apps.py  emails.py  fields.py  filters.py  forms.py  models.py  serializers.py  signals.py  tasks.py  utils.py  views.py  viewsets.py  widgets.py
wine_cellar/apps/wine/migrations/: 0001_initial.py  0002_add_common_sizes.py  0002_alter_wine_capacity.py  0002_source_source_unique_source_wine_source.py  0002_wine_unique_appversion.py  0002_wineimage.py  0003_alter_rating_wine.py  (+28 more)
wine_cellar/assets/css/: button.css  card.css  detail.css  forms.css  homepage.css  image.css  map.css  menu.css  page-layout.css  scan.css  storage.css  styles.css  utility.css
wine_cellar/assets/js/: image_preview.ts  init_tom_select.js  init_tom_select.ts  stock_add.ts  stock_drag.ts  tomselect.d.ts  wine_carousel.ts
wine_cellar/conf/: asgi.py  celery.py  dev.py  docker_dev_settings.py  docker_settings.py  prod.py  settings.py  test.py  urls.py  wsgi.py
wine_cellar/react/: BarcodeScanner.tsx  django.d.ts  react_bar_code.jsx  react_bar_code.tsx
wine_cellar/react/maps/: AddMarkerControl.js  AddMarkerControl.tsx  ChoosePointMap.jsx  ChoosePointMap.tsx  GeoJsonMarker.js  GeoJsonMarker.tsx  ItemPopup.jsx  ItemPopup.tsx  Map.jsx  Map.tsx  MapPopup.jsx  MapPopup.tsx  MaplibreGlLayer.js  MaplibreGlLayer.tsx  MarkerClusterLayer.tsx  WineMaps.jsx  WineMaps.tsx  ZoomToMarkers.tsx  country.json  country_points.json  react_choose_point.jsx  react_choose_point.tsx  react_maps.tsx
wine_cellar/static/css/: forms.css  menu.css  page-layout.css  styles.css
wine_cellar/templates/: base.html
wine_cellar/templates/includes/: settings_sidebar.html
wine_cellar/templates/registration/: login.html  logout.html
(+40 files in other folders)
