[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "wine_cellar"
authors = [
    {name = "Julian Dehm", email = "julian@dehm.dev"},
    {name = "Phillippa Morland"},
]
description = "Self-hosted wine cellar"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["wine", "wine cellar", "wine database"]
license = {text = "AGPL-3.0"}
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]
dependencies = [
    'importlib-metadata; python_version<"3.12"',
		"Django>=5.0.0",
]
dynamic = ["version"]
[tool.setuptools]
packages = ["wine_cellar"]
[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 88
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "wine_cellar.conf.test"
# -- recommended but optional:
python_files = ["test_*.py", "*_test.py"]
[tool.coverage.run]
omit = ["wine_cellar/conf/*","**/tests/*", "**/migrations/*"]

