[project]
name = "wine_cellar"
version = "0.9.0"
authors = [
    {name = "Julian Dehm", email = "julian@dehm.dev"},
    {name = "Phillippa Morland"},
]
description = "Self-hosted wine cellar"
readme = "README.md"
requires-python = ">=3.13"
keywords = ["wine", "wine cellar", "wine database"]
license = {text = "AGPL-3.0"}
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "Django==6.0.7",
    "celery==5.6.3",
    "django-allauth[socialaccount]==65.18.0",
    "django-filter==25.2",
    "django-widget-tweaks==1.5.1",
    "litellm==1.92.0",
    "pillow==12.3.0",
    "pycountry==26.2.16",
    "requests==2.34.2",
    "whitenoise[brotli]==6.12.0",
]

[dependency-groups]
dev = [
    "Faker==40.31.0",
    "black==26.5.1",
    "django-debug-toolbar==7.0.0",
    "djlint==1.40.6",
    "factory-boy==3.3.3",
    "flake8==7.3.0",
    "isort==8.0.1",
    "pytest-cov==7.1.0",
    "pytest-django==4.12.0",
    "pytest-factoryboy==2.8.1",
    "pytest==9.1.1",
    "commitizen==4.16.4",
    "zensical==0.0.50",
]
prod = [
    "psycopg[c]==3.3.4",
    "gunicorn==26.0.0",
    "redis==8.0.1",
    "sentry-sdk==2.64.0",
]

[tool.uv]
package = false

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 88

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "wine_cellar.conf.test"
python_files = ["test_*.py", "*_test.py"]

[tool.setuptools]
packages = ["wine_cellar"]
[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | env
  | \.env
  | build
  | dist
  | node_modules
)/
''''

[tool.coverage.run]
omit = ["wine_cellar/conf/*","**/tests/*", "**/migrations/*"]

[tool.commitizen]
name = "cz_customize"
tag_format = "$version"
legacy_tag_formats = ["v$version"]
version_scheme = "semver2"
version_provider = "pep621"
version_files = [
    "wine_cellar/__init__.py:__version__",
    "pyproject.toml:version",
]
update_changelog_on_bump = false
major_version_zero = true
changelog_merge_prerelease = true
changelog_start_rev = "v0.0.12"
pre_bump_hooks = ["scripts/update_docs_version.sh"]

[tool.commitizen.customize]
commit_parser = '^((?P<change_type>feat|fix|refactor|perf|BREAKING CHANGE)(?:\((?P<scope>[^()\r\n]*)\)|\()?(?P<breaking>!)?|\w+!):\s(?P<subject>[^\n]*)(?P<body>(?:\n(?!Refs:|:\s#)[^\n]*)*)(?:\n(?P<footer>(?:Refs:[\s\S]*)?))?$'
